# Android-UVC-Camera

./: .gitignore  CHANGES.md  DB-Dateibeschreiber.txt  LICENSE  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
Debug-Apks/0/: camera_0.apk  initCamaeraValues.txt
Debug-Apks/1/: camera-1.apk  initCamaeraValues.txt
Debug-Apks/2/: camera-2.apk  initCamaeraValues.txt
app/: build.gradle  local.properties  mapping.txt  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/libs/: cfalertdialog-1.1.0.aar  floatingedittext-1.0.5.aar
app/release/: app-release.aab  app-release.apk  endoscop_5.apk  output.json  uvc_camera.aab
app/release/release/: app.aab
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Privacy_Policy_UVC_Camera.html
app/src/main/c/: Android.mk
app/src/main/c/libUvc_Support/: CMakeLists.txt  libuvc_support.c  libuvc_support.h
app/src/main/c/libjpeg/: jpeglib.h
app/src/main/c/libuvc/: CMakeLists.txt
app/src/main/cpp/libUvc_Support/: Android.mk  CMakeLists.txt  libuvc_support.c  uvc_support.cpp  uvc_support.h
app/src/main/cpp/libUvc_Support/UVC_Camera_Saki/: CMakeLists.txt  UVCPreview.cpp  UVCPreview.h  libUVCCamera.h  objectarray.h  utilbase.h
app/src/main/cpp/libjpeg-cmake/: .gitignore  CMakeLists.txt  jconfig.h.in  jpeglib.h
app/src/main/cpp/libjpeg-version-9/: Application.mk  LICENSE  README.md
app/src/main/cpp/libjpeg-version-9/libjpeg9/: Android.mk  CMakeLists.txt  jpeglib.h
app/src/main/cpp/libuvc/: CMakeLists.txt
app/src/main/cpp/libuvc/android/jni/: Android.mk
app/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_internal.h
app/src/main/cpp/libuvc/src/: ctrl_original.c  device.c  frame-mjpeg.c  stream.c
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/jpeg8d/: Android.mk  jpeglib.h
app/src/main/jni/libUsb_Support/: Android.mk  libusb_support.c  libusb_support.h
app/src/main/jni/libUvc_Support/: Android.mk  libuvc_support.c  libuvc_support.h
app/src/main/jni/libuvc/: CMakeLists.txt
app/src/main/libs/arm64-v8a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/libs/armeabi-v7a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/libs/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/libs/x86_64/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/res/.layout/: activity_call.xml  dialog_header_layout.xml  set_up_the_device_layout_main.xml  set_up_the_device_manual_automatic.xml  stf_select_active_urbs.xml  stf_select_max_package_layout.xml
app/src/main/res/.values/: styles.xml
app/src/main/res/drawable/: bg_button.xml  bg_button_bildaufnahme.xml  bg_button_flip_horizontal.xml  bg_button_flip_left.xml  bg_button_flip_right.xml  bg_button_flip_vertical.xml  bg_button_red.xml  bg_button_settings.xml  bg_button_start_stream.xml  bg_button_toggle_libusb.xml  bg_button_videoaufnahme.xml  bg_button_yellow.xml  bg_toggle_aspect_ratio.xml  bg_toggle_button_flip_horizontal.xml  bg_toggle_button_flip_vertical.xml  ic_baseline_screen_rotation_24.xml  ic_brightness_2green_24dp.xml  ic_frameinterval_24dp.xml  ic_launcher_background.xml  ic_request_permission_24dp.xml  ic_resolution_24dp.xml  ic_search_camera_24dp.xml  ic_web_rtc_24dp.xml  round_button.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_call.xml  activity_privacy_policyctivity.xml  activity_usbcamera.xml  auto_detect_fragment.xml  auto_detect_layout.xml  dialog_footer_layout.xml  dialog_header_layout.xml  dialog_header_layout_20.xml  dialog_header_layout_40.xml  einstellungen.xml  iso_stream_fragment.xml  (+18 more)
fastlane/: Appfile  Fastfile  fastlane env.txt  fastlane supply errer.txt
fastlane/metadata/android/ar/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/da-DK/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/el-GR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-GB/: full_description.txt  title.txt
fastlane/metadata/android/en-US/: short_description.txt
fastlane/metadata/android/fi-FI/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/hr/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/is-IS/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/it-IT/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ja-JP/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ka-GE/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ko-KR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/lv/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/mn-MN/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/nl-NL/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/no-NO/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/pt-PT/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ro/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-TW/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
libusbcamera/: build.gradle
proguardTools/: mapping-release.txt
uvc_camera/: build.gradle
uvc_camera/release/: uvc_camera.aab
uvc_camera/src/main/: AndroidManifest.xml
(+176 files in other folders)
